syntax = "proto3";

service BankClientService {
	rpc Test(BankClientRequest) returns (BankClientReply);
}
message BankClientRequest {
	string message = 1;
}
message BankClientReply {
	bool status = 1;
}